Mon Aug 23 23:14:21 2010  Tanaka Akira  <akr@fsij.org>

	* ext/pathname/pathname.c (path_each_line): Pathname#each_line
	  translated from pathname.rb.

Mon Aug 23 22:30:58 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* common.mk (version.o): depends on both of version.h and
	  include/ruby/version.h.   [ruby-dev:42063]

Mon Aug 23 13:09:27 2010  NAKAMURA, Hiroshi  <nahi@ruby-lang.org>

	* backport r29071 from ruby_1_8;

	  * ext/openssl/ossl_asn1.c (obj_to_asn1bool): fixed ASN1::Boolean
	    encoding issue for OpenSSL 1.0.0 compatibility.
	    ASN1::Boolean.new(false).to_der wrongly generated "\1\1\377" which
	    means 'true'.

	    ASN1_TYPE_set of OpenSSL <= 0.9.8 treats value 0x100 as 'false'
	    but OpenSSL >= 1.0.0 treats it as 'true'.  ruby-ossl was using
	    0x100 for 'false' for backward compatibility.  Just use 0x0 for
	    the case OpenSSL >= OpenSSL 0.9.7.

	  * test/openssl/test_asn1.rb: test added.

Mon Aug 23 12:28:58 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* re.c (rb_reg_search): fix: 4th argument should be regexp
	  object. patched by shintaro kuwamoto [ruby-dev:41667] #3459

Mon Aug 23 02:23:05 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* util.c (ruby_strtod): make sure to have digit-sequence after 'p'
	  for hexadecimal-floating-constant. [ruby-dev:42105]

Mon Aug 23 00:23:07 2010  Tadayoshi Funaba  <tadf@dotrb.org>

	* lib/date.rb, lib/date/format.rb: [ruby-core:31695]

Sun Aug 22 09:08:02 2010  Tanaka Akira  <akr@fsij.org>

	* include/ruby/ruby.h (UINT2NUM): fix ifdef condition for LLP64.
	  reported by Daniel Gutmanas.  [ruby-core:31778]

Sun Aug 22 06:46:21 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* array.c (RAND_UPTO): macro for random number.

Sun Aug 22 05:55:01 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in: fix typo.  a patch from Eric Wong at
	  [ruby-core:31810].

Sat Aug 21 20:09:43 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* vm.c: add missing prototype of rb_iseq_clone for r29063.
