@@ -1,3 +1,10 @@
+Tue Aug 24 01:14:58 2010  Kenta Murata <mrkn@mrkn.jp>
+
+	* ext/bigdecimal/bigdecimal.c (BigDecimal_to_f): to_f must underflow
+	  when the exponent is less than DBL_MIN_10_EXP - BASE_FIG.
+
+	* test/bigdecimal/test_bigdecimal.rb (test_to_f): added test for the above changes.
+
 Mon Aug 23 23:14:21 2010  Tanaka Akira  <akr@fsij.org>
 
 	* ext/pathname/pathname.c (path_each_line): Pathname#each_line
